v476: remove any more padding/margin maybe 5 more px of height from our eldtrich menu UI its still not fitting correct

--- a/css/spellbook.css
+++ b/css/spellbook.css
@@ -6,7 +6,7 @@
   padding: 4px;
   display: none;
   margin-top: 4px;
-  height: calc(100% - 257px); /* Reduced from -254px to -257px to reduce overall height */
+  height: calc(100% - 262px); /* Reduced from -257px to -262px to reduce overall height */
 }
 
 #spellbook.shown {
@@ -19,7 +19,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 2px;
+  padding: 1px; /* Reduced from 2px to 1px */
   box-sizing: border-box;
 }
 
@@ -27,10 +27,10 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 1px;
-  padding: 1px;
+  padding: 0px; /* Reduced from 1px to 0px */
   background: #382418;
   border: 1px solid #000;
-  max-height: calc(100% - 28px); /* Reduced from 31px to 28px to reduce black box height */
+  max-height: calc(100% - 26px); /* Reduced from 28px to 26px */
   overflow: hidden;
 }
 
@@ -55,10 +55,10 @@
 
 /* Description box styles */
 .spellbook-description {
-  height: 25px; /* Reduced from 28px to 25px to reduce description box height */
+  height: 23px; /* Reduced from 25px to 23px */
   background: #000;
   margin-top: auto;
-  padding: 4px;
+  padding: 2px; /* Reduced from 4px to 2px */
   color: #dda0dd;
   font-size: 11px;
   border: 1px solid #5a473a;
